index.html and style.css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <ul class="nav">
     <a class="nav, a" href="#"><li>Autorin</li></a>
+    <a class="nav, a" href="#"><li>Blog</li></a>
     <a class="nav, a" href="#"> <li>Storys</li></a>
     <a class="nav, a" href="#"><li>Kontakt</li></a>
     </ul>
