images/quill.png and images/water.jpg and index.html and style.css

--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
 
 <body class="body">
  <div class="nav">
-    <img src="../landing_page/images/logo.png" 
-    alt="Curupiras Storys" width="300" height="300">
+    <img src="../landing_page/images/quill.png" 
+    alt="Curupiras Storys" width="200" height="330">
     
     <ul class="nav">
-    <a class="nav, a" href="#"><li>Autorin</li></a>
-    <a class="nav, a" href="#"><li>Blog</li></a>
     <a class="nav, a" href="#"> <li>Storys</li></a>
+    <a class="nav, a" href="#"><li>Blog</li></a>
+    <a class="nav, a" href="#"><li>Autorin</li></a>
     <a class="nav, a" href="#"><li>Kontakt</li></a>
     </ul>
     </div>
+<div class="blog">
+Ich bin ein Test
+<p>Ich bin ein besserer Test</p>
+</div>
+<footer class="footer">
+    Ich stehe am Ende
+</footer>
 </body>
 </html>
