--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
 </head>
 
 <body class="body">
- <div class="nav">
+
+<div class="nav">
+<div class="logo">
     <img src="../landing_page/images/quill.png" 
-    alt="Curupiras Storys" width="200" height="330">
-    
+    alt="Curupiras Storys" width="120" height="230">
+</div>    
     <ul class="nav">
     <a class="nav, a" href="#"> <li>Storys</li></a>
     <a class="nav, a" href="#"><li>Blog</li></a>
     <a class="nav, a" href="#"><li>Autorin</li></a>
     <a class="nav, a" href="#"><li>Kontakt</li></a>
     </ul>
-    </div>
+    
+</div>
+
 <div class="blog">
 Ich bin ein Test
 <p>Ich bin ein besserer Test</p>
