index.html and style.css

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
     </ul>
     
 </div>
-
+</br>
 <div class="blog">
-Ich bin ein Test
+<h1>Herzlich Willkommen auf meiner Autorenseite!</h1>  
+<p>Test ist ein Test und die Tester gehen testen</p>
 <p>Ich bin ein besserer Test</p>
 </div>
+<div class="Image_h">
+
+</div>
+</body>
 <footer class="footer">
     Ich stehe am Ende
 </footer>
-</body>
 </html>
