intex.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="nav">
 <div class="logo">
     <img src="../landing_page/images/quill.png" 
-    alt="Curupiras Storys" width="40" height="100">
+    alt="Curupiras Storys" width="35" height="90">
 </div>    
     <ul class="nav">
     <a class="nav, a" href="#"> <li>Storys</li></a>
@@ -20,17 +20,19 @@
     </ul>
     
 </div>
-</br>
+
 <div class="blog">
-<h1>Herzlich Willkommen auf meiner Autorenseite!</h1>  
-<p>Test ist ein Test und die Tester gehen testen</p>
-<p>Ich bin ein besserer Test</p>
+
+<p class="p1">Herzlich Willkommen auf meiner Autorenseite!</p>  
+<p class="blog">Test ist ein Test und die Tester gehen testen</p>
+<p class="blog">Ich bin ein besserer Test</p>
 </div>
 <div class="Image_h">
+    Platzhalter für Bild
 
 </div>
 </body>
 <footer class="footer">
-    Ich stehe am Ende
+    Copyright
 </footer>
 </html>
