index.html and style.css

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
 <div class="blog">
 
 <p class="p1">Herzlich Willkommen auf meiner Autorenseite!</p>  
-<p class="blog">Test ist ein Test und die Tester gehen testen</p>
-<p class="blog">Ich bin ein besserer Test</p>
+<p class="p2">Test ist ein Test und die Tester gehen testen</p>
+<p class="p3">Ich bin ein besserer Test</p>
 </div>
 <div class="Image_h">
     Platzhalter für Bild
 
+</div>
+<div>
+    ich bin ein Platzhalter
 </div>
 </body>
 <footer class="footer">
