index.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <div class="nav">
 <div class="logo">
     <img src="../landing_page/images/quill.png" 
-    alt="Curupiras Storys" width="35" height="90">
-</div>    
+    alt="Curupiras Storys" width="45" height="90">
+    
+</div> 
+    <h1>Curupiras Storys</h1>   
+    
     <ul class="nav">
     <a class="nav, a" href="#"> <li>Storys</li></a>
     <a class="nav, a" href="#"><li>Blog</li></a>
