index.html and style.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Curupiras-Landing-Page</title>
     <link rel="Stylesheet" href="../landing_page/style.css">
+  
 </head>
 
 <body class="body">
@@ -13,7 +14,7 @@
     alt="Curupiras Storys" width="45" height="90">
     
 </div> 
-    <h1>Curupiras Storys</h1>   
+    <h1 class="h1">Curupiras Storys</h1>   
     
     <ul class="nav">
     <a class="nav, a" href="#"> <li>Storys</li></a>
