index.html and style.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="blog">
 
-<p class="p1">Herzlich Willkommen auf meiner Autorenseite!</p> 
+<p class="p1">This site is awesome!</p> 
 <div class="Image_h">
     Platzhalter für Bild
 </div> 
