--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
 <div class="blog">
 
 <p class="p1">This site is awesome!</p> 
+<p class="p2">Schön, dass du hergefunden hast. </br>Auf dieser Website geht es um meinen Weg,
+    eine gute Autorin zu werden. </br>Schließ dich mir an und join meinem Discord:
+</p>
 <div class="Image_h">
     Platzhalter für Bild
 </div> 
-<p class="p2">Test ist ein Test und die Tester gehen testen</p>
-<p class="p3">Ich bin ein besserer Test</p>
+
+<p class="p3">Beitreten</p>
+
 </div>
 
 <div>
