--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
 <p class="p2">Schön, dass du hergefunden hast. </br>Auf dieser Website geht es um meinen Weg,
     eine gute Autorin zu werden. </br>Schließ dich mir an und join meinem Discord:
 </p>
-<div class="Image_h">
+    <div class="Image_h">
     Platzhalter für Bild
-</div> 
+    </div> 
 
-<p class="p3">Beitreten</p>
+<a class="button" href="#">Beitreten</a>
 
 </div>
 
 <div>
     ich bin ein Platzhalter
 </div>
+
+
 </body>
 <footer class="footer">
     Copyright
