--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
 
 </div>
 
-<div>
-    ich bin ein Platzhalter
+<div class="Schaukasten">
+    <h1 class="h1">Story Schaukasten</h1>
 </div>
-
-
-</body>
+<div class="quotes">
+    Das ist eine Quote aus meinem Aktuellen Buch. Yolorama Wasserschaden im Himmel -Anna Banana
+</div>
 <footer class="footer">
     Copyright
 </footer>
+
+
+</body>
+
 </html>
