index.html and style.css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 <div class="quotes">
     Das ist eine Quote aus meinem Aktuellen Buch. Yolorama Wasserschaden im Himmel -Anna Banana
 </div>
+<div class="sign_u">
+<p class="sign_u">Unterstütz mich!</br>
+Wenn dir meine Storys gefallen, kauf meine Bücher. :)
+<a class="button_2; sign_u" href="#">Jetzt kaufen</a></p>
+</div>
 <footer class="footer">
     Copyright
 </footer>
