--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 <div class="sign_u">
 <p class="sign_u">Unterstütz mich!</br>
 Wenn dir meine Storys gefallen, kauf meine Bücher. :)
-<a class="button_2; sign_u" href="#">Jetzt kaufen</a></p>
+</p>
+<a class="button_2; sign_u" href="#">Jetzt kaufen</a>
 </div>
 <footer class="footer">
     Copyright
