index.html and style.css

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
     Das ist eine Quote aus meinem Aktuellen Buch. Yolorama Wasserschaden im Himmel -Anna Banana
 </div>
 <div class="sign_u">
-<p class="sign_u">Unterstütz mich!</br>
-Wenn dir meine Storys gefallen, kauf meine Bücher. :)
-</p>
+<p class="sign_u">Unterstütz mich! Wenn dir meine Storys gefallen, kauf meine Bücher. :)
+</p></div>
 <a class="button_2; sign_u" href="#">Jetzt kaufen</a>
-</div>
+
 <footer class="footer">
     Copyright
 </footer>
