index.html and style.css

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
 <div class="Schaukasten">
     <h1 class="h1">Story Schaukasten</h1>
+    <p>Yolorama: Ein Buch über Lamas</p>
+    <p>Fucking Hitler: New Adult Romance</p>
+    <p>Bloodmoon: Vampiere zum abeißen</p>
+    <p>After WWIII: Dystopie</p>
 </div>
 <div class="quotes">
     Das ist eine Quote aus meinem Aktuellen Buch. Yolorama Wasserschaden im Himmel -Anna Banana
