--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div class="blog">
 
 <p class="p1">This site is awesome!</p> 
-<p class="p2">Schön, dass du hergefunden hast. </br>Auf dieser Website geht es um meinen Weg,
-    eine gute Autorin zu werden. </br>Schließ dich mir an und join meinem Discord:
+<p class="p2">Schön, dass du hergefunden hast.<br> Auf dieser Website geht es um meinen Weg,
+    eine gute Autorin zu werden.<br> Schließ dich mir an und join meinem Discord:
 </p>
 <a class="button" href="#">Beitreten</a>
 <div class="Image_h">
@@ -37,11 +37,14 @@
 </div>
 
 <div class="Schaukasten">
-    <h1 class="h1">Story Schaukasten</h1>
-    <p>Yolorama: Ein Buch über Lamas</p>
-    <p>Fucking Hitler: New Adult Romance</p>
-    <p>Bloodmoon: Vampiere zum abeißen</p>
-    <p>After WWIII: Dystopie</p>
+    <h1 class="h1_2">Story Schaukasten</h1>
+</div> 
+<div class="p4">   
+    <p class="p4">Yolorama: Ein Buch über Lamas</p>
+    <p class="p4">Fucking Hitler: New Adult Romance</p>
+    <p class="p4">Bloodmoon: Vampiere zum abeißen</p>
+    <p class="p4">After WWIII: Dystopie</p>
+
 </div>
 <div class="quotes">
     Das ist eine Quote aus meinem Aktuellen Buch. Yolorama Wasserschaden im Himmel -Anna Banana
