index.html and style.css

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 </div>
 
 <div class="Schaukasten">
-    <h1 class="h1_2">Story Schaukasten</h1>
-</div> 
+    <h1 class="h1_2">Story Schaukasten</h1></div> 
 <div class="p4">   
     <p class="p4">Yolorama: Ein Buch über Lamas</p>
     <p class="p4">Fucking Hitler: New Adult Romance</p>
