--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
     <p class="p4">After WWIII: Dystopie</p>
 
 </div>
+
 <div class="quotes">
     Das ist eine Quote aus meinem Aktuellen Buch. Yolorama Wasserschaden im Himmel -Anna Banana
 </div>
+
 <div class="sign_u">
-<p class="sign_u">Unterstütz mich! Wenn dir meine Storys gefallen, kauf meine Bücher. :)
+    <p class="p5">Unterstütz mich!</p>
+</br>
+<p class="p6">Wenn dir meine Storys gefallen, kauf meine Bücher. :)
   
-</p></div>
-<a class="button_2" href="#">Jetzt kaufen</a>  
+</p><a class="button_2" href="#">Jetzt kaufen</a> </div>
+
 
 <footer class="footer">
     Copyright
