index.html and style.css

--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
 </div>
 
 <div class="sign_u">
-    <p class="p5">Unterstütz mich!</p>
-</br>
-<p class="p6">Wenn dir meine Storys gefallen, kauf meine Bücher. :)
-  
-</p><a class="button_2" href="#">Jetzt kaufen</a> </div>
-
+<div class="p5">Unterstütz mich!</div>
+<div class="p6">Wenn dir meine Storys gefallen, kauf meine Bücher. :)</div>
+<div><a class="button_2" href="#">Jetzt kaufen</a> </div>
+</div>
 
 <footer class="footer">
     Copyright
