--- a/index.html
+++ b/index.html
@@ -3,37 +3,29 @@
     <meta charset="UTF-8">
     <title>Curupiras-Landing-Page</title>
     <link rel="Stylesheet" href="../landing_page/style.css">
-  
 </head>
 
 <body class="body">
-
 <div class="nav">
 <div class="logo">
     <img src="../landing_page/images/quill.png" 
     alt="Curupiras Storys" width="45" height="90">
      <h1 class="h1">Curupiras Storys</h1>   
 </div> 
-   
     <ul class="nav">
     <a class="nav, a" href="#"> <li>Storys</li></a>
     <a class="nav, a" href="#"><li>Blog</li></a>
     <a class="nav, a" href="#"><li>Autorin</li></a>
     <a class="nav, a" href="#"><li>Kontakt</li></a>
     </ul>
-    
 </div>
 
 <div class="blog">
-
-<p class="p1">This site is awesome!</p> 
-<p class="p2">Schön, dass du hergefunden hast.<br> Auf dieser Website geht es um meinen Weg,
-    eine gute Autorin zu werden.<br> Schließ dich mir an und join meinem Discord:
-</p>
-<a class="button" href="#">Beitreten</a>
-<div class="Image_h">
-    Platzhalter für Bild
-    </div> 
+    <p class="p1">This site is awesome!</p> 
+    <p class="p2">Schön, dass du hergefunden hast.<br> Auf dieser Website geht es um meinen Weg,
+    eine gute Autorin zu werden.<br> Schließ dich mir an und join meinem Discord:</p>
+    <a class="button" href="#">Beitreten</a>
+    <div class="Image_h">Platzhalter für Bild</div> 
 </div>
 
 <div class="Schaukasten">
@@ -43,7 +35,6 @@
     <p class="p4">Fucking Hitler: New Adult Romance</p>
     <p class="p4">Bloodmoon: Vampiere zum abeißen</p>
     <p class="p4">After WWIII: Dystopie</p>
-
 </div>
 
 <div class="quotes">
