--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curupiras-Landing-Page</title>
     <link rel="Stylesheet" href="../landing_page/style.css">
 </head>
 
-<body class="body">
+<body>
 <div class="nav">
 <div class="logo">
     <img src="../landing_page/images/quill.png" 
