--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="Stylesheet" href="../landing_page/style.css">
 </head>
 
-<body>
+<body class="body">
 <div class="nav">
 <div class="logo">
     <img src="../landing_page/images/quill.png" 
@@ -51,7 +51,7 @@
 </div>
 
 <footer class="footer">
-  © by The Odin Project
+  Copyright &copy; The Odin Project 2021
 </footer>
 
 </body>
