--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,15 @@
 </div>
 
 <div class="Schaukasten">
-    <h1 class="h1_2">Story Schaukasten</h1></div> 
+    <h1 class="h1_2">Story Schaukasten</h1></div>
+    <div class="InhaltSK">
+        <img src="images/water.jpg" width="200px" height="200px">
+            <img src="images/water.jpg" width="200px" height="200px">
+            <img src="images/water.jpg" width="200px" height="200px">
+            <img src="images/water.jpg" width="200px" height="200px">
+        
+    </div>
+    
 <div class="p4">   
     <p class="p4">Yolorama: Ein Buch über Lamas</p>
     <p class="p4">Fucking Hitler: New Adult Romance</p>
