--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p class="p2">Schön, dass du hergefunden hast.<br> Auf dieser Website geht es um meinen Weg,
     eine gute Autorin zu werden.<br> Schließ dich mir an und join meinem Discord:</p>
     <a class="button" href="#">Beitreten</a>
-    <div class="Image_h">Platzhalter für Bild</div> 
+    <div class="Image_h"><img src="images/water.jpg" width="754px" height="310px"></div> 
 </div>
 
 <div class="Schaukasten">
